--- a/gradle.properties
+++ b/gradle.properties
@@ -26,3 +26,6 @@ org.gradle.caching=true
 # https://developer.android.com/topic/libraries/support-library/androidx-rn
 # Android plugin uses the appropriate AndroidX library instead of a Support Library.
 android.useAndroidX=true
+
+android.enableJetifier=true
+android.suppressUnsupportedCompileSdk=33
