--- a/cropper/build.gradle
+++ b/cropper/build.gradle
@@ -13,20 +13,20 @@ afterEvaluate {
 
                 groupId = 'com.github.marufh3'
                 artifactId = 'croimg'
-                version = '5.3.7'
+                version = '5.3.8'
             }
         }
     }
 }
 
 android {
-    compileSdk 33
+    compileSdk 35
 
     defaultConfig {
         minSdk 21
-        targetSdk 33
+        targetSdk 35
         versionCode 1
-        versionName '5.3.7'
+        versionName '5.3.8'
     }
 
     compileOptions {
@@ -58,23 +58,27 @@ android {
 }
 
 dependencies {
+    // AndroidX core libraries
     implementation "androidx.appcompat:appcompat:1.6.1"
     implementation "androidx.appcompat:appcompat-resources:1.6.1"
+    implementation "androidx.activity:activity-ktx:1.7.2"
+    implementation "androidx.exifinterface:exifinterface:1.3.7"
+    implementation "androidx.core:core-ktx:1.12.0"
 
-    implementation "androidx.activity:activity-ktx:$androidXActivity"
+    // Kotlin Coroutines
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.3"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3"
 
-    implementation "androidx.exifinterface:exifinterface:$androidXExifVersion"
-    implementation "androidx.core:core-ktx:$androidXCoreKtxVersion"
+    // Unit testing
+    testImplementation "junit:junit:4.13.2"
+    testImplementation "androidx.test.ext:junit:1.1.6"
+    testImplementation "androidx.test:core:1.5.0"
+    testImplementation "androidx.test:runner:1.5.0"
+    testImplementation "io.mockk:mockk:1.13.9"
 
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutinesVersion"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutinesVersion"
-
-    testImplementation "junit:junit:$junitVersion"
-    testImplementation "androidx.test.ext:junit:$androidXJunitVersion"
-    testImplementation "androidx.test:core:$androidXTestVersion"
-    testImplementation "androidx.test:runner:$androidXTestVersion"
-    testImplementation "io.mockk:mockk:$mockkVersion"
-
-    testImplementation "androidx.fragment:fragment-testing:$androidXFragmentTestingVersion"
-    testImplementation "org.robolectric:robolectric:$robolectricVersion"
+    // Fragment testing
+    testImplementation "androidx.fragment:fragment-testing:1.6.2"
+    
+    // Robolectric
+    testImplementation "org.robolectric:robolectric:4.11"
 }
