Remove versions.gradle and hardcode dependencies for JitPack

--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    apply from: 'versions.gradle'
+    //apply from: 'versions.gradle'
 
     repositories {
         maven { url "https://plugins.gradle.org/m2/" }
