Use libs.versions.toml only, remove versions.gradle references for JitPack

--- a/build.gradle
+++ b/build.gradle
@@ -6,11 +6,10 @@ buildscript {
         google()
         mavenCentral()
     }
-
     dependencies {
-        classpath "com.android.tools.build:gradle:$androidGradleVersion"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
-        classpath "org.jlleitschuh.gradle:ktlint-gradle:$ktlintGradleVersion"
+        classpath "com.android.tools.build:gradle:8.1.0"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.23"
+        classpath "org.jlleitschuh.gradle:ktlint-gradle:11.6.0" // example
     }
 }
 
