--- a/cropper/build.gradle
+++ b/cropper/build.gradle
@@ -3,25 +3,10 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-parcelize'
 apply plugin: 'maven-publish'
 
-group = 'com.github.marufh3' // নিজের GitHub username
-
-afterEvaluate 
-    publishing {
-        publications {
-            release(MavenPublication) {
-                from components["release"]  // quotes দিয়ে চেষ্টা করো
-                groupId = 'com.github.marufh3'
-                artifactId = 'croimg'
-                version = '5.3.8'
-            }
-        }
-    }
-}
-
+group = 'com.github.marufh3' // GitHub username
 
 android {
-
-  namespace = "com.canhub.cropper"
+    namespace "com.canhub.cropper"
     compileSdk 35
 
     defaultConfig {
@@ -51,12 +36,12 @@ android {
     testOptions {
         unitTests.includeAndroidResources = true
     }
+}
 
-    repositories {
-        google()
-        mavenCentral()
-        maven { url "https://jitpack.io" }
-    }
+repositories {
+    google()
+    mavenCentral()
+    maven { url "https://jitpack.io" }
 }
 
 dependencies {
@@ -83,4 +68,18 @@ dependencies {
     
     // Robolectric
     testImplementation "org.robolectric:robolectric:4.11"
+}
+
+// ✅ Maven Publish
+afterEvaluate {
+    publishing {
+        publications {
+            release(MavenPublication) {
+                from components.release
+                groupId = 'com.github.marufh3'
+                artifactId = 'croimg'
+                version = '5.3.8'
+            }
+        }
+    }
 }
